--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,11 +1,11 @@
 <!-- # Shortcodes -->
 <!-- -Accordion -->
-<link rel="stylesheet" href="/blog/assets/shortcodes/shortcode-accordion.css">
+<link rel="stylesheet" href="/blog/assets/shortcodes/shortcode-accordion.css?v=1">
 
 <!-- -Callouts -->
-<link rel="stylesheet" href="/blog/assets/shortcodes/shortcode-callouts.css">
+<link rel="stylesheet" href="/blog/assets/shortcodes/shortcode-callouts.css?v=1">
 
 <!-- -Lite YouTube Embed -->
-<script src="/blog/assets/shortcodes/lite-yt/lite-yt-embed.js" defer></script>
-<link rel="stylesheet" href="/blog/assets/shortcodes/lite-yt/lite-yt-embed.css">
-<link rel="stylesheet" href="/blog/assets/shortcodes/lite-yt/lite-yt-embed-custom.css">
+<script src="/blog/assets/shortcodes/lite-yt/lite-yt-embed.js?v=1" defer></script>
+<link rel="stylesheet" href="/blog/assets/shortcodes/lite-yt/lite-yt-embed.css?v=1">
+<link rel="stylesheet" href="/blog/assets/shortcodes/lite-yt/lite-yt-embed-custom.css?v=1">
