--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,15 +1,8 @@
-<!-- # Shortcodes -->
-<!-- -Accordion -->
-<link rel="stylesheet" href="/blog/assets/shortcodes/shortcode-accordion.css?v=1">
-
-<!-- -Callouts -->
-<link rel="stylesheet" href="/blog/assets/shortcodes/shortcode-callouts.css?v=1">
-
 <!-- -Lite YouTube Embed -->
 <script src="/blog/assets/shortcodes/lite-yt/lite-yt-embed.js?v=1" defer></script>
+
 <link rel="preload" as="style" onload="this.rel='stylesheet'" type="text/css"
   href="/blog/assets/shortcodes/lite-yt/lite-yt-embed.css?v=1">
+
 <link rel="preload" as="style" onload="this.rel='stylesheet'" type="text/css"
-  href="/blog/assets/shortcodes/lite-yt/lite-yt-embed-custom.css?v=1">
-<!-- <link rel="stylesheet" href="/blog/assets/shortcodes/lite-yt/lite-yt-embed.css?v=1"> -->
-<!-- <link rel="stylesheet" href="/blog/assets/shortcodes/lite-yt/lite-yt-embed-custom.css?v=1"> -->
+  href="/blog/assets/shortcodes/lite-yt/lite-yt-embed-custom.css?v={{ time.Now.Unix }}">
