--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -48,11 +48,13 @@
 
     <ul class="post-tags">
       {{- range ($.GetTerms $categories) }}
-      <li><a href="{{ .Permalink }}" class="category">{{ .LinkTitle }}</a></li>
+      <li><a href="{{ .Permalink }}"
+          class='category category-{{ partial "slugify.html" .LinkTitle }}'>{{ .LinkTitle }}</a></li>
       {{- end }}
 
       {{- range ($.GetTerms $tags) }}
-      <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
+      <li><a href="{{ .Permalink }}" class='tag-{{ partial "slugify.html" .LinkTitle }}'>{{ .LinkTitle }}</a></li>
+
       {{- end }}
     </ul>
     {{- if (.Param "ShowPostNavLinks") }}
