--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -4,6 +4,12 @@
 {{- $scratch.Add "meta" (slice (printf "<span title='%s'>%s</span>" (.Date) (.Date | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
 {{- end }}
 
+{{- if not .Lastmod.IsZero -}}
+{{ if gt .Lastmod .Date }}
+{{- $scratch.Add "meta" (slice (printf "<span title='%s'>upd: %s</span>" (.Lastmod) (.Lastmod | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
+{{end}}
+{{- end }}
+
 {{- if (.Param "ShowReadingTime") -}}
 {{- $scratch.Add "meta" (slice (i18n "read_time" .ReadingTime | default (printf "%d min" .ReadingTime))) }}
 {{- end }}
