--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,2 +1,4 @@
 <script src="/blog/assets/js/ntlinks.js?v=1" defer></script>
 <script src="/blog/assets/js/assets-img.js?v=1" defer></script>
+
+<script data-goatcounter="https://saladvisor-blog.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
