--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -5,4 +5,4 @@
   href="/blog/assets/shortcodes/lite-yt/lite-yt-embed.css?v=1">
 
 <link rel="preload" as="style" onload="this.rel='stylesheet'" type="text/css"
-  href="/blog/assets/shortcodes/lite-yt/lite-yt-embed-custom.css?v=1">
+  href="/blog/assets/shortcodes/lite-yt/lite-yt-embed-custom.css?v={{ time.Now.Unix }}">
