--- a/layouts/partials/page_footer.html
+++ b/layouts/partials/page_footer.html
@@ -1,8 +1,12 @@
+{{/* Load Smooth Anchor Scroll script */}}
+{{- $smoothscroll := resources.Get "js/anchor-scroll.js" }}
+<script src="{{ $smoothscroll.RelPermalink }}?v={{ time.Now.Unix }}" defer></script>
+
 {{/* Load mediumZoom script */}}
 {{- if (.Param "EnableImageZoom") }}
 {{- $imagezoom := resources.Get "js/medium-zoom.min.js" }}
-<script src="{{ $imagezoom.RelPermalink }}" data-no-instant {{- if site.Params.assets.disableFingerprinting }}
-  integrity="{{ $imagezoom.Data.Integrity }}" {{- end }}></script>
+<script src="{{ $imagezoom.RelPermalink }}?v={{ time.Now.Unix }}" data-no-instant
+  {{- if site.Params.assets.disableFingerprinting }} integrity="{{ $imagezoom.Data.Integrity }}" {{- end }}></script>
 
 <script>
   mediumZoom('.entry-cover img');
