--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,5 +1,5 @@
 <script src="/blog/assets/js/ntlinks.js?v={{ time.Now.Unix }}" defer></script>
-<script src="/blog/assets/js/assets-img.js?v={{ time.Now.Unix }}" defer></script>
+<!-- <script src="/blog/assets/js/assets-img.js?v={{ time.Now.Unix }}" defer></script> -->
 
 {{- if .IsPage }}
 {{- partial "page_footer.html" . }}
