--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -11,7 +11,7 @@
             {{- $author_links = $author_links | append $author_name }}
         {{- end }}
     {{- end }}
-    {{- delimit $author_links "&nbsp;\\&nbsp;" | safeHTML }}
+    {{- delimit $author_links ",&nbsp;" | safeHTML }}
 {{- else }}
     {{- $author_url := .Params.authorURL }}
     <a class="author-link" href="{{ $author_url }}">{{ $author }}</a>
