--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,8 +1,7 @@
-<!-- -Lite YouTube Embed -->
-<script src="/blog/assets/shortcodes/lite-yt/lite-yt-embed.js?v=1" defer></script>
-
+{{/* Load Lite YouTube Embed CSS */}}
+{{- $liteytembedCSS := resources.Get "css/lite-yt-embed.css" }}
+{{- $liteytembedCustomCSS := resources.Get "css/lite-yt-embed-custom.css" }}
 <link rel="preload" as="style" onload="this.rel='stylesheet'" type="text/css"
-  href="/blog/assets/shortcodes/lite-yt/lite-yt-embed.css?v=1">
-
+  href="{{ $liteytembedCSS.RelPermalink }}?v=1.0.0">
 <link rel="preload" as="style" onload="this.rel='stylesheet'" type="text/css"
-  href="/blog/assets/shortcodes/lite-yt/lite-yt-embed-custom.css?v={{ time.Now.Unix }}">
+  href="{{ $liteytembedCustomCSS.RelPermalink }}?v=1.0.0">
