--- a/layouts/shortcodes/iframes/yt.html
+++ b/layouts/shortcodes/iframes/yt.html
@@ -1,1 +1,1 @@
-<lite-youtube videoid="{{ .Get 0 }}" title="{{ .Get 1 }}" playlabel="Play"></lite-youtube>
+<lite-youtube videoid="{{ .Get 0 }}" title="{{ .Get 1 }}" params="{{ .Get 2 }}" playlabel="Play"></lite-youtube>
