--- a/assets/css/extended/custom-theme-vars.css
+++ b/assets/css/extended/custom-theme-vars.css
@@ -1,14 +1,18 @@
 :root {
+  --theme: #fff;
   --accent-acid: #ccff00;
   --accent-jam: #fb2d8d;
+  --font-size: 1.125rem;
 }
 
 :root {
   --header-bg: rgba(255, 255, 255, 0.5);
-  --link-hover-color: var(--accent-jam);
+  --accent: var(--accent-jam);
+  --mark-color: #fff;
 }
 
 .dark {
   --header-bg: rgba(29, 30, 32, 0.5);
-  --link-hover-color: var(--accent-acid);
+  --accent: var(--accent-acid);
+  --mark-color: #000;
 }
