--- a/assets/css/extended/shortcode-embed-post.css
+++ b/assets/css/extended/shortcode-embed-post.css
@@ -87,6 +87,10 @@
   width: 22px !important;
 }
 
+.post-content .embed-post-content img {
+  border-radius: 4px;
+}
+
 svg.embed-post-icon {
   fill: var(--content);
 }
