--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,3 +1,5 @@
+<meta name="darkreader-lock">
+
 {{/* Load Lite YouTube Embed CSS */}}
 {{- $liteytembedCSS := resources.Get "css/lite-yt-embed.css" }}
 {{- $liteytembedCustomCSS := resources.Get "css/lite-yt-embed-custom.css" }}
