--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -20,5 +20,13 @@
 </script>
 {{- end }}
 
+{{/* <script src="https://assets.nozsh.su/js/loose/xmas.min.js?v=1" defer></script>
+{{/* <script src="{{ (resources.Get "js/xmas-settings.js").RelPermalink }}?v=1" defer></script> *}}
+<style>
+  .xny-bg { animation: 1s xnyBgAnim; opacity: 0.3; }
+  @keyframes xnyBgAnim { from { opacity: 0; } to { opacity: 0.3; } }
+</style> */}}
+
+
 {{/* GoatCounter */}}
 <script data-goatcounter="https://saladvisor-blog.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
