--- a/assets/css/extended/shortcode-callouts.css
+++ b/assets/css/extended/shortcode-callouts.css
@@ -27,6 +27,7 @@
   display: flex;
   padding: 1.2em 1.6em;
   border-radius: var(--radius);
+  backdrop-filter: blur(6px);
 }
 
 .kg-callout-card div.kg-callout-emoji {
