--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -26,33 +26,41 @@ body {
 }
 
 .post-tags .category {
-  background: rgba(255, 212, 93, 0.8);
+  /* background: rgba(255, 212, 93, 0.8); */
+  background: var(--accent);
   color: #000;
   font-weight: bold;
 }
 
 .post-tags .category:hover {
-  background: rgba(255, 212, 93, 0.6);
+  /* background: rgba(255, 212, 93, 0.6); */
+  background: var(--accent);
+  opacity: 0.8;
 }
 
-.post-tags .tag.tag-zametki {
-  background: rgba(232, 246, 34, 0.8);
+.post-tags .category.category-zametki {
+  /* background: rgba(232, 246, 34, 0.8); */
+  background: var(--accent);
   color: #000;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
-.post-tags .tag.tag-zametki:hover {
-  background: rgba(232, 246, 34, 0.6);
+.post-tags .category.category-zametki:hover {
+  /* background: rgba(232, 246, 34, 0.6); */
+  background: var(--accent);
+  opacity: 0.8;
 }
 
-.post-tags .tag.tag-stati {
-  background: rgba(61, 181, 255, 0.8);
+.post-tags .category.category-stati {
+  background: var(--accent);
   color: #000;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
-.post-tags .tag.tag-stati:hover {
-  background: rgba(61, 181, 255, 0.6);
+.post-tags .category.category-stati:hover {
+  /* background: rgba(61, 181, 255, 0.6); */
+  background: var(--accent);
+  opacity: 0.8;
 }
 
 .post-content figure > figcaption {
@@ -113,6 +121,10 @@ body {
   overflow-x: hidden;
   word-break: keep-all;
   white-space: nowrap;
+}
+
+.paginav {
+  padding: 10px 0 15px 0;
 }
 
 kbd {
