--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -26,39 +26,21 @@ body {
 }
 
 .post-tags .category {
-  /* background: rgba(255, 212, 93, 0.8); */
+  --color: #fff;
+}
+
+.dark .post-tags .category {
+  --color: #000;
+}
+
+.post-tags .category {
   background: var(--accent);
-  color: #000;
+  color: var(--color);
   font-weight: bold;
 }
 
 .post-tags .category:hover {
   /* background: rgba(255, 212, 93, 0.6); */
-  background: var(--accent);
-  opacity: 0.8;
-}
-
-.post-tags .category.category-zametki {
-  /* background: rgba(232, 246, 34, 0.8); */
-  background: var(--accent);
-  color: #000;
-  /* font-weight: 600; */
-}
-
-.post-tags .category.category-zametki:hover {
-  /* background: rgba(232, 246, 34, 0.6); */
-  background: var(--accent);
-  opacity: 0.8;
-}
-
-.post-tags .category.category-stati {
-  background: var(--accent);
-  color: #000;
-  /* font-weight: 600; */
-}
-
-.post-tags .category.category-stati:hover {
-  /* background: rgba(61, 181, 255, 0.6); */
   background: var(--accent);
   opacity: 0.8;
 }
