--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -21,8 +21,7 @@
 {{- end }}
 
 {{/* XMAS */}}
-{{/**/}}
-<style>
+{{/* <style>
   .xny-bg { animation: 1s xnyBgAnim; opacity: 0.3; }
   @keyframes xnyBgAnim { from { opacity: 0; } to { opacity: 0.3; } }
   .kg-callout-card {backdrop-filter: blur(6px);}
@@ -40,10 +39,10 @@
     initialOpacity: 0.2, // Opacity on born
     opacityThreshold: 0.5 // Opacity on start dying
   };
-</script>
+</script> */}}
 
 <!-- Load xmas.js -->
-<script src="https://assets.nozsh.su/js/loose/xmas.min.js?v={{ time.Now.Unix }}" defer></script> {{/**/}}
+{{/* <script src="https://assets.nozsh.su/js/loose/xmas.min.js?v={{ time.Now.Unix }}" defer></script> */}}
 
 {{/* GoatCounter */}}
 <script data-goatcounter="https://saladvisor-blog.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
