--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -3,6 +3,7 @@
   var remark_config = {
     host: "https://remark42.nozsh.su",
     site_id: "nozsh",
+    components: ["embed", "last-comments"],
     theme: "light",
     locale: "ru",
     simple_view: false,
