--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -128,3 +128,10 @@ mark {
   background-color: var(--accent);
   color: var(--mark-color);
 }
+
+.hr {
+  margin: 30px 0;
+  height: 2px;
+  background: var(--tertiary);
+  border: 0;
+}
