--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,17 +1,71 @@
 {{- /* Comments area start */ -}}
+<hr class="hr" />
+
+{{- if (.Param "sha1") }} {{/* idk */}}
 <script>
-  var remark_config = {
-    host: "https://remark42.nozsh.su",
-    site_id: "nozsh",
-    components: ["embed", "last-comments"],
-    theme: "light",
-    locale: "ru",
-    simple_view: false,
-    no_footer: true,
-  };
+  document.write('<!-- sha1: {{ .Param "sha1" }} -->');
 </script>
+{{- end }}
 
-<script>!function(e,n){for(var o=0;o<e.length;o++){var r=n.createElement("script"),c=".js",d=n.head||n.body;"noModule"in r?(r.type="module",c=".mjs"):r.async=!0,r.defer=!0,r.src=remark_config.host+"/web/"+e[o]+c,d.appendChild(r)}}(remark_config.components||["embed"],document);</script>
+<div class="comments">
+  <script
+    id="giscus-script"
+    src="https://giscus.app/client.js"
+    data-repo="nozsh/blog"
+    data-repo-id="R_kgDOL6MjOw"
+    data-category="Announcements"
+    data-category-id="DIC_kwDOL6MjO84CokGc"
+    data-mapping="pathname"
+    data-strict="1"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme=""
+    data-lang="ru"
+    data-loading="lazy"
+    crossorigin="anonymous"
+    async
+  ></script>
+</div>
 
-<div id="remark42"></div>
+<script>
+  const themeKey = "pref-theme";
+  const giscusScriptId = "giscus-script";
+  const themeUrl = "https://assets.nozsh.su/css/blog/giscus-theme-";
+  const switchButtonId = "theme-toggle";
+  const swithDelay = 100;
+
+  function updateGiscusTheme() {
+    let theme = localStorage.getItem(themeKey);
+    if (!theme) {
+      theme = window.matchMedia("(prefers-color-scheme: dark)").matches
+        ? "dark"
+        : "light";
+    }
+
+    const themeURL = `${themeUrl}${theme}.css`;
+
+    const giscusScript = document.getElementById(giscusScriptId);
+    giscusScript.setAttribute("data-theme", themeURL);
+
+    const giscusFrame = document.querySelector("iframe.giscus-frame");
+    if (giscusFrame) {
+      giscusFrame.contentWindow.postMessage(
+        { giscus: { setConfig: { theme: themeURL } } },
+        "https://giscus.app"
+      );
+    }
+  }
+
+  document.addEventListener("DOMContentLoaded", updateGiscusTheme);
+
+  const toggleButton = document.getElementById(switchButtonId);
+  if (toggleButton) {
+    toggleButton.addEventListener("click", () => {
+      setTimeout(() => {
+        updateGiscusTheme();
+      }, swithDelay);
+    });
+  }
+</script>
 {{- /* Comments area end */ -}}
