--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -121,7 +121,7 @@ kbd {
   margin: 0 2px;
   font-size: calc(var(--font-size) * 0.95);
   /* font-weight: bold; */
-  letter-spacing: 0.1rem;
+  /* letter-spacing: 0.1rem; */
 }
 
 mark {
