--- a/layouts/shortcodes/ahtung/badEn.html
+++ b/layouts/shortcodes/ahtung/badEn.html
@@ -2,7 +2,7 @@
   <div class="kg-callout-emoji">🇺🇸</div>
   <div class="kg-callout-text">
     <b>
-      <strong>Author, authors, or part of authors are not native speaker(s) of English.</strong>
+      <strong>Author(s) or some of authors are not native speaker(s) of English.</strong>
     </b>
     <br>
     <b>
