--- a/layouts/shortcodes/ahtung/1.html
+++ b/layouts/shortcodes/ahtung/1.html
@@ -2,15 +2,15 @@
   <div class="kg-callout-emoji">🚧</div>
   <div class="kg-callout-text">
     <b>
-      <strong>Автор статьи никого ни к чему не призывает!</strong>
+      Автор статьи никого ни к чему не призывает!
     </b>
     <br>
     <b>
-      <strong>Эта статья написана в образовательных целях.</strong>
+      Эта статья написана в образовательных целях.
     </b>
     <br>
     <b>
-      <strong>Не воспринимайте написанное здесь всерьез и не повторяйте за автором.</strong>
+      Не воспринимайте написанное здесь всерьез и не повторяйте за автором.
     </b>
   </div>
 </div>
