--- a/layouts/shortcodes/ahtung/badEn.html
+++ b/layouts/shortcodes/ahtung/badEn.html
@@ -2,11 +2,11 @@
   <div class="kg-callout-emoji">🇺🇸</div>
   <div class="kg-callout-text">
     <b>
-      <strong>Author(s) or some of authors are not native speaker(s) of English.</strong>
+      Author(s) or some of authors are not native speaker(s) of English.
     </b>
     <br>
     <b>
-      <strong>Text may contain bad spelling, incorrect expressions, verbal turns, sentence constructions, etc.</strong>
+      Text may contain bad spelling, incorrect expressions, verbal turns, sentence constructions, etc.
     </b>
   </div>
 </div>
