--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -99,7 +99,8 @@ body {
   pointer-events: inherit;
 }
 
-.entry-footer {
+.entry-footer,
+.archive-meta {
   overflow-x: hidden;
   word-break: keep-all;
   white-space: nowrap;
